<resources>
    <string name="app_name">SFTL</string>
    <string name="str_iniciarCompra">Iniciar Compra</string>
    <string name="str_continuarCompra">Continuar Compra</string>
    <string name="str_terminaCompra">Terminar Compra</string>
    <string name="str_origen">Origen:</string>
    <string name="str_destino">Destino:</string>
    <string name="str_origen_hint">Elige un origen.</string>
    <string name="str_destino_hint">Elige un destino.</string>
    <string name="str_cabeceraCompletarCompra">Completa tu compra</string>
    <string name="str_iniciarSesion">Iniciar Sesion</string>
    <string name="str_iniciandoSesion">Conectando al panel de control.</string>
    <string name="str_pasarelaPagoinfo">Enviando información a la pasarela de pago.</string>
    <string name="str_paneldeusuario">Panel de usuario</string>
    <string name="str_serviciospremium">Servicios premiums</string>
    <string name="str_email">Email:</string>
    <string name="str_password">Contraseña:</string>
    <string name="str_basedatos">Base de datos (Opcional):</string>
    <string name="str_basedatosdir">bd01.sftl.com</string>
    <string name="str_resumen">Resumen de compra</string>
    <string name="str_pasarelaPago">Ir a la pasarela de pago</string>
    <string name="str_resumen_nombre">A nombre de:</string>
    <string name="str_resumen_email">Email de contacto:</string>
    <string name="str_resumen_fecha">Fecha de embarque:</string>
    <string name="str_resumen_total">Total a pagar:</string>
    <string name="str_resumen_puntua">Puntua tu experiencia:</string>
    <string name="str_resumen_numpersonas">Numero de personas:</string>
    <string name="str_seekbardis">Seekbar Discreto:</string>
    <string name="str_seekbarnor">Seekbar Normal:</string>

    <string-array name="valores_barcos">
        <item>Facinas Jet</item>
        <item>Tahivilla Jet</item>
        <item>Hueloterra Express</item>
        <item>Norte Express</item>
    </string-array>
    <string-array name="valores_zonas">
        <item>Tarifa</item>
        <item>Algeciras</item>
        <item>Ceuta</item>
        <item>Tanger</item>
    </string-array>
    <string name="servPremiumCafe">Café</string>
    <string name="servPremiumComida">Comida a bordo</string>
    <string name="servPremiumAsiento">Asiento premium</string>
    <string name="servZonaVIP">Zona VIP</string>
    <string name="servTaquilla">Taquilla grande</string>
    <string name="servPremiumPiscina">Piscina</string>
    <string name="str_noticia">La mejor forma de viajar.</string>
    <string name="str_noticia_sub">Descubre todas nuestras ofertas y precios disponibles.</string>
    <string name="str_deco_mascotas">Mascotas contigo siempre.</string>
    <string name="str_deco_barco">Expandimos nuestra flota.</string>
    <string name="str_deco_mundo">Somos ecosostenibles.</string>
    <string name="str_datos_personas">Personas</string>
    <string name="str_datos_numpersonas">1</string>
    <string name="str_datos_fecha">Fecha</string>
    <string name="str_datos_coche">Coche</string>
    <string name="str_datos_acomp">Acompañantes</string>
    <string name="str_datos_nenes">Niños</string>
    <string name="str_datos_animales">Animales</string>
    <string name="str_datos_precio">Precio total: </string>
    <string name="str_datos_personales">Datos personales</string>
    <string name="str_persona">Persona</string>
    <string name="str_nombre">Nombre:</string>
    <string name="str_dninie">DNI/NIE:</string>
    <string name="str_correo">Correo:</string>


</resources>