<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiciosPremiumActivity"
    android:background="@color/Cyan">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="0dp"
        android:background="@drawable/topbar_background">
        <ImageButton
            android:id="@+id/butIbBack"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/arrowleft"
            android:backgroundTint="@color/White"
            android:layout_weight="3"
            app:tint="@color/White" />
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:src="@drawable/logo"
            android:layout_weight="1"
            app:tint="@color/White" />
        <View
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="3"
            app:tint="@color/White" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/llMenu"
        app:layout_constraintBottom_toTopOf="@id/butContinuar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbackground"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:paddingTop="0dp"
            android:paddingBottom="7dp"
            android:text="@string/str_serviciospremium"
            android:textAlignment="center"
            android:textColor="@color/DarkOrange"
            android:textSize="20sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5dp"
            android:background="@color/CyanDark" />
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgServicios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Theme.MaterialComponents.DayNight">
            <com.google.android.material.chip.Chip
                android:id="@+id/cpCafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servPremiumCafe"
                android:checkable="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cpAsiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servPremiumAsiento"
                android:checkable="true"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cpComida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servPremiumComida"
                android:checkable="true"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cpPiscina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servPremiumPiscina"
                android:checkable="true"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/cpTaquilla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servTaquilla"
                android:checkable="true"/>

        </com.google.android.material.chip.ChipGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">
            <CheckBox
                android:id="@+id/cbCondiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/Cyan"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:fontFamily="@font/lexend"
                android:textColor="@color/CyanDark"
                android:text="He leido y acepto los terminos y condiciones de compras para los clientes de SFLT"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/CyanDark"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/butContinuar">
        <TextView
            android:fontFamily="@font/lexend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/White"
            android:text="@string/str_datos_precio"/>
        <TextView
            android:id="@+id/tvPrecioTotal"
            android:fontFamily="@font/lexend"
            android:paddingVertical="15dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/White"
            android:paddingStart="10dp"
            tools:text="XX,XX €"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/butContinuar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/Black"
        android:text="@string/str_terminaCompra"
        android:fontFamily="@font/lexend"
        android:textColor="@color/White"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center">
    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>